# murmurate

./: .bandit  .gitignore  LICENSE  PROJECT_LOG.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
control-ui/: index.html  package-lock.json  package.json  vite.config.js
control-ui/src/: App.jsx  api.js  index.css
control-ui/src/__tests__/: App.test.jsx  api.test.js  components.test.jsx  useSSE.test.js
control-ui/src/components/: Button.jsx  Card.jsx  Layout.jsx  Modal.jsx  StatusBadge.jsx
control-ui/src/hooks/: useApi.js  useSSE.js
control-ui/src/pages/: Config.jsx  Dashboard.jsx  History.jsx  Personas.jsx  Plugins.jsx
data/: user_agents.json
data/fingerprints/: fonts.json  platforms.json  screens.json  webgl.json
data/topic_pools/: academic.json  hobbies.json  professional.json  shopping.json  travel.json
docs/: DESIGN-BRIEF-control-ui.md  INSTALL-macOS.md
docs/superpowers/plans/: 2026-03-13-murmurate-implementation.md
menubar/: murmurate_menubar.py  requirements.txt  run.sh  setup.py
scripts/: install-macos.sh
src/murmurate/: __main__.py  cli.py  config.py  database.py  log.py  models.py
src/murmurate/api/: __init__.py  events.py  mdns.py  middleware.py  server.py
src/murmurate/daemon/: install.py  lifecycle.py
src/murmurate/persona/: __init__.py  engine.py  evolution.py  fingerprint.py  storage.py  topics.py
src/murmurate/plugins/: amazon.py  base.py  bing.py  duckduckgo.py  google.py  reddit.py  registry.py  wikipedia.py  youtube.py
src/murmurate/scheduler/: rate_limiter.py  scheduler.py  timing.py
src/murmurate/transport/: base.py  browser.py  http.py  pool.py
tests/: conftest.py  test_api_server.py  test_cli.py  test_config.py  test_daemon.py  test_database.py  test_events.py  test_fingerprint.py  test_integration.py  test_log.py  test_mdns.py  test_menubar.py  test_models.py  test_persona_engine.py  test_persona_evolution.py  test_persona_storage.py  test_plugin_amazon.py  test_plugin_base.py  test_plugin_bing.py  test_plugin_duckduckgo.py  test_plugin_google.py  test_plugin_reddit.py  test_plugin_registry.py  test_plugin_wikipedia.py  test_plugin_youtube.py  test_rate_limiter.py  test_scheduler.py  test_timing.py  test_topics.py  test_transport_browser.py  test_transport_http.py  test_transport_pool.py
