[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "murmurate"
version = "0.3.0"
description = "A privacy tool that generates decoy internet activity to obscure real browsing patterns"
requires-python = ">=3.11"
dependencies = [
    # Cap below 3.14: aioresponses 0.7.8 (latest) is incompatible with aiohttp
    # 3.14's ClientResponse signature (now requires a `stream_writer` kwarg),
    # which breaks the HTTP transport test mocks. Lift once aioresponses supports it.
    "aiohttp>=3.9,<3.14",
    "aiosqlite>=0.20",
    "click>=8.1",
    "tomli-w>=1.0",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
# Browser automation support — optional because Playwright binaries are large
# and not needed for HTTP-only transport
browser = [
    "playwright>=1.40",
]
# LAN discovery via mDNS/Bonjour — optional, no-op if not installed
discovery = [
    "zeroconf>=0.80",
]
# Development tools: testing, coverage, async test support, HTTP mocking
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "pytest-cov>=4.1",
    "aioresponses>=0.7",
]

[project.scripts]
murmurate = "murmurate.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/murmurate"]

[tool.pytest.ini_options]
# Auto mode means all async test functions are treated as coroutines automatically
# without needing @pytest.mark.asyncio on each one
asyncio_mode = "auto"
testpaths = ["tests"]
# Ensure src/ is on the path so `import murmurate` works even when the editable
# install's .pth file is not processed (which can happen when the project path
# contains spaces, as with iCloud Drive locations on macOS).
pythonpath = ["src"]
